--- a/requirements.txt
+++ b/requirements.txt
@@ -30,9 +30,9 @@ celery[redis]>=5.3.0
 arq>=0.25.0  # Optional lightweight async task runner
 
 # --- Memory & Vector Store ---
-chromadb>=0.4.0
-qdrant-client>=1.6.0  # Optional: switchable vector DB backend
-sentence-transformers>=2.2.0
+# chromadb>=0.4.0
+# qdrant-client>=1.6.0  # Optional: switchable vector DB backend
+# sentence-transformers>=2.2.0
 
 # --- Authentication & RBAC ---
 python-jose[cryptography]>=3.3.0
@@ -47,20 +47,20 @@ beautifulsoup4>=4.12.0
 pyyaml>=6.0.0  # Policy / config files
 
 # --- AI/LLM Integrations (Optional) ---
-openai>=1.0.0  # External LLM calls if used
+# openai>=1.0.0  # External LLM calls if used
 
 # --- MLDL Kernel ---
-numpy>=1.21.0
-scikit-learn>=1.0.0
-joblib>=1.0.0
+# numpy>=1.21.0
+# scikit-learn>=1.0.0
+# joblib>=1.0.0
 
 # --- Cloud / Infra (Optional) ---
-boto3>=1.26.0  # AWS SDK for S3 / Secrets Manager / etc.
-prometheus_client>=0.17.0  # Metrics export (Prometheus/Grafana)
+# boto3>=1.26.0  # AWS SDK for S3 / Secrets Manager / etc.
+# prometheus_client>=0.17.0  # Metrics export (Prometheus/Grafana)
 
 # --- Optional System Monitoring ---
-psutil>=5.9.0
+# psutil>=5.9.0
 
 # --- Development / Testing (Optional) ---
-pytest>=7.0.0
-pytest-asyncio>=0.21.0
+# pytest>=7.0.0
+# pytest-asyncio>=0.21.0
