--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,10 @@ services:
   redis:
     image: redis:7-alpine
     container_name: grace_redis
-    command: redis-server --appendonly yes --requirepass grace_redis_pass
+    command: redis-server --appendonly yes --requirepass grace_redis_pass --appendfsync everysec
+    sysctls:
+      - net.core.somaxconn=1024
+      - vm.overcommit_memory=1
     ports:
       - "6379:6379"
     volumes:
