--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,9 +27,7 @@ services:
     image: redis:7-alpine
     container_name: grace_redis
     command: redis-server --appendonly yes --requirepass grace_redis_pass --appendfsync everysec
-    sysctls:
-      - net.core.somaxconn=1024
-      - vm.overcommit_memory=1
+      # sysctls removed for Codespaces compatibility
     ports:
       - "6379:6379"
     volumes:
