--- a/requirements.txt
+++ b/requirements.txt
@@ -24,5 +24,5 @@ joblib>=1.0.0
 # psutil>=5.8.0
 
 # Development dependencies (optional)
-# pytest>=7.0.0
-# pytest-asyncio>=0.21.0
+pytest>=7.0.0
+pytest-asyncio>=0.21.0
