--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,25 @@ on:
     branches: [ main ]
 
 jobs:
-  test:
+  sqlite-tests:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.12'
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+          pip install pytest
+      - name: Run sqlite tests
+        run: |
+          pytest -q
+
+  postgres-tests:
+    needs: sqlite-tests
     runs-on: ubuntu-latest
     services:
       postgres:
