--- a/requirements.txt
+++ b/requirements.txt
@@ -62,5 +62,5 @@ pyyaml>=6.0.0  # Policy / config files
 # psutil>=5.9.0
 
 # --- Development / Testing (Optional) ---
-# pytest>=7.0.0
-# pytest-asyncio>=0.21.0
+pytest>=7.0.0
+pytest-asyncio>=0.21.0
