--- a/requirements.txt
+++ b/requirements.txt
@@ -54,9 +54,9 @@ pytest>=7.0.0
 pytest-asyncio>=0.21.0
 
 # --- MLDL Kernel ---
-# numpy>=1.21.0
-# scikit-learn>=1.0.0
-# joblib>=1.0.0
+numpy>=1.24.0
+scikit-learn>=1.3.0
+joblib>=1.3.0
 
 # --- Cloud / Infra (Optional) ---
 # boto3>=1.26.0  # AWS SDK for S3 / Secrets Manager / etc.
