--- a/requirements.txt
+++ b/requirements.txt
@@ -72,29 +72,36 @@ pytest-asyncio>=0.21.0
 # Grace AI System - Production Dependencies
 
 # Core Framework
-numpy>=1.24.0
+numpy>=1.26.0
 pandas>=2.0.0
 
 # Database
-psycopg2-binary>=2.9.0  # PostgreSQL adapter
-SQLAlchemy>=2.0.0       # ORM for database operations
-alembic>=1.12.0         # Database migrations
+psycopg2-binary>=2.9.0
+SQLAlchemy>=2.0.0
+alembic>=1.12.0
 
 # Caching
-redis>=5.0.0            # Redis client
-hiredis>=2.2.0          # Redis protocol parser (performance)
+redis>=5.0.0
+hiredis>=2.2.0
 
-# Embeddings & AI
-openai>=1.0.0           # OpenAI API
-sentence-transformers>=2.2.0  # Alternative embeddings
-tiktoken>=0.5.0         # Token counting
+# API & Validation
+fastapi>=0.104.0
+uvicorn[standard]>=0.24.0
+pydantic>=2.0.0
+pydantic-settings>=2.0.0
+
+# Embeddings & AI (optional but recommended)
+# openai>=1.0.0
+# anthropic>=0.7.0
+sentence-transformers>=2.2.0
+tiktoken>=0.5.0
 
 # Async & Performance
-asyncio-redis>=0.16.0
 aioredis>=2.0.0
 
-# Monitoring & Health
+# Monitoring & Logging
 prometheus-client>=0.19.0
+structlog>=23.0.0
 psutil>=5.9.0
 
 # Utilities
@@ -108,6 +115,7 @@ pytest-asyncio>=0.21.0
 pytest-cov>=4.1.0
 black>=23.0.0
 ruff>=0.1.0
+mypy>=1.7.0
 
 # Grace-specific
 # (Add any custom Grace dependencies here)
