--- a/requirements.txt
+++ b/requirements.txt
@@ -90,10 +90,18 @@ uvicorn[standard]>=0.24.0
 pydantic>=2.0.0
 pydantic-settings>=2.0.0
 
-# Embeddings & AI (optional but recommended)
-# openai>=1.0.0
-# anthropic>=0.7.0
-sentence-transformers>=2.2.0
+# Authentication & Security
+passlib[bcrypt]>=1.7.4
+python-jose[cryptography]>=3.3.0
+python-multipart>=0.0.6
+
+# Embeddings & Vector Search
+sentence-transformers>=2.2.0  # HuggingFace embeddings
+faiss-cpu>=1.7.4  # FAISS vector store
+# openai>=1.0.0  # OpenAI embeddings (optional)
+# pgvector  # PostgreSQL vector extension (optional)
+
+# Additional AI
 tiktoken>=0.5.0
 
 # Async & Performance
@@ -108,6 +116,7 @@ psutil>=5.9.0
 python-dotenv>=1.0.0
 pyyaml>=6.0.0
 python-dateutil>=2.8.0
+requests>=2.31.0
 
 # Development
 pytest>=7.4.0
@@ -116,6 +125,3 @@ pytest-cov>=4.1.0
 black>=23.0.0
 ruff>=0.1.0
 mypy>=1.7.0
-
-# Grace-specific
-# (Add any custom Grace dependencies here)
