--- a/requirements.txt
+++ b/requirements.txt
@@ -107,6 +107,10 @@ tiktoken>=0.5.0
 # Async & Performance
 aioredis>=2.0.0
 
+# Async Database Support
+aiosqlite>=0.19.0  # For async SQLite
+asyncpg>=0.29.0    # For async PostgreSQL
+
 # Monitoring & Logging
 prometheus-client>=0.19.0
 structlog>=23.0.0
