--- a/requirements.txt
+++ b/requirements.txt
@@ -1,132 +1,73 @@
-# ===============================
-# Grace Governance Kernel Dependencies
-# ===============================
-
-# --- Core runtime (standard library, no install needed) ---
-# asyncio
-# sqlite3
-# json
-# hashlib
-# datetime
-# logging
-# statistics
-
-# --- API & Server ---
-fastapi>=0.104.0
-uvicorn[standard]>=0.24.0
-pydantic>=2.5.0
-pydantic-settings>=2.0.0
-websockets>=12.0
-
-# --- Database Layer ---
-sqlalchemy>=2.0.0
-alembic>=1.13.0
-asyncpg>=0.29.0
-psycopg2-binary>=2.9.0  # Sync driver for migrations/tools
-
-# --- Redis & Background Workers ---
-redis>=5.0.0
-celery[redis]>=5.3.0
-arq>=0.25.0  # Optional lightweight async task runner
-
-# --- Memory & Vector Store ---
-# chromadb>=0.4.0
-# qdrant-client>=1.6.0  # Optional: switchable vector DB backend
-# sentence-transformers>=2.2.0
-
-# --- Authentication & RBAC ---
-python-jose[cryptography]>=3.3.0
-passlib[bcrypt]>=1.7.4
-python-multipart>=0.0.6
-pyjwt>=2.8.0  # Optional JWT handling if needed
-
-# --- Document Processing ---
-pypdf>=3.0.0
-python-docx>=1.1.0
-beautifulsoup4>=4.12.0
-pyyaml>=6.0.0  # Policy / config files
-
-# --- AI/LLM Integrations (Optional) ---
-# openai>=1.0.0  # External LLM calls if used
-
-# --- Development / Testing (Optional) ---
-pytest>=7.0.0
-pytest-asyncio>=0.21.0
-
-# --- MLDL Kernel ---
-numpy>=1.24.0
-scikit-learn>=1.3.0
-joblib>=1.3.0
-
-# --- Cloud / Infra (Optional) ---
-# boto3>=1.26.0  # AWS SDK for S3 / Secrets Manager / etc.
-# prometheus_client>=0.17.0  # Metrics export (Prometheus/Grafana)
-
-# --- Optional System Monitoring ---
-# psutil>=5.9.0
-
-# --- Development / Testing (Optional) ---
-pytest>=7.0.0
-pytest-asyncio>=0.21.0
-
-# Grace AI System - Production Dependencies
+# Grace AI System - Complete Dependencies
 
 # Core Framework
-numpy>=1.26.0
-pandas>=2.0.0
-
-# Database
-psycopg2-binary>=2.9.0
-SQLAlchemy>=2.0.0
-alembic>=1.12.0
-
-# Caching
-redis>=5.0.0
-hiredis>=2.2.0
-
-# API & Validation
 fastapi>=0.104.0
 uvicorn[standard]>=0.24.0
-pydantic>=2.0.0
+pydantic>=2.4.0
 pydantic-settings>=2.0.0
-
-# Authentication & Security
-passlib[bcrypt]>=1.7.4
-python-jose[cryptography]>=3.3.0
 python-multipart>=0.0.6
 
+# Database
+sqlalchemy>=2.0.0
+psycopg2-binary>=2.9.9
+alembic>=1.12.0
+
+# Authentication & Security
+python-jose[cryptography]>=3.3.0
+passlib[bcrypt]>=1.7.4
+bcrypt>=4.0.1
+python-dotenv>=1.0.0
+
+# Redis (optional, for rate limiting)
+redis>=5.0.0
+aioredis>=2.0.1
+
 # Embeddings & Vector Search
-sentence-transformers>=2.2.0  # HuggingFace embeddings
-faiss-cpu>=1.7.4  # FAISS vector store
-# openai>=1.0.0  # OpenAI embeddings (optional)
-# pgvector  # PostgreSQL vector extension (optional)
+openai>=1.0.0
+sentence-transformers>=2.2.2
+transformers>=4.35.0
+torch>=2.1.0
+faiss-cpu>=1.7.4
+numpy>=1.24.0
 
-# Additional AI
-tiktoken>=0.5.0
+# Vector Database
+pgvector>=0.2.3
 
-# Async & Performance
-aioredis>=2.0.0
-
-# Async Database Support
-aiosqlite>=0.19.0  # For async SQLite
-asyncpg>=0.29.0    # For async PostgreSQL
+# WebSocket
+websockets>=12.0
 
 # Monitoring & Logging
 prometheus-client>=0.19.0
 structlog>=23.0.0
-psutil>=5.9.0
+python-json-logger>=2.0.7
 
-# Utilities
-python-dotenv>=1.0.0
-pyyaml>=6.0.0
-python-dateutil>=2.8.0
-requests>=2.31.0
+# HTTP Client
+aiohttp>=3.9.0
+httpx>=0.25.0
 
-# Development
+# Data Processing
+pandas>=2.1.0
+scipy>=1.11.0
+
+# Testing
 pytest>=7.4.0
 pytest-asyncio>=0.21.0
+pytest-cov>=4.1.0
 
-# NLP for topic extraction
-keybert>=0.7.0  # Preferred: KeyBERT for topic extraction
-spacy>=3.7.0  # Alternative: spaCy for NLP
-# Download spaCy model: python -m spacy download en_core_web_sm
+# Utilities
+python-dateutil>=2.8.2
+pytz>=2023.3
+
+# CLI & Utilities
+rich>=13.7.0  # For pretty console output
+
+# Optional: gRPC for swarm (production)
+# grpcio>=1.59.0
+# grpcio-tools>=1.59.0
+
+# Optional: Kafka for swarm (production)
+# aiokafka>=0.8.1
+
+# Optional: Loki/ELK for logging (production)
+# python-logging-loki>=0.3.1
+# elasticsearch>=8.11.0
