--- a/config/.env.template
+++ b/config/.env.template
@@ -1,57 +1,32 @@
-# Grace Governance Environment Configuration
-# Copy this to .env and fill in your API keys
-
-# AI Provider API Keys
-OPENAI_API_KEY=your_openai_api_key_here
-OPENAI_ORG_ID=your_openai_org_id_here
-ANTHROPIC_API_KEY=your_anthropic_api_key_here
+# Grace AI System - Environment Configuration Template
+# Copy this file to .env and update with your values
 
 # Database Configuration
-DATABASE_URL=postgresql://grace_user:grace_pass@localhost:5432/grace_governance
-REDIS_URL=redis://:grace_redis_pass@localhost:6379
+DATABASE_URL=postgresql://grace_user:your_password_here@localhost:5432/grace_db
+POSTGRES_PASSWORD=your_secure_password_here
 
-# S3/Object Storage Configuration
-S3_ENDPOINT=http://localhost:9000
-S3_ACCESS_KEY=grace_minio_user
-S3_SECRET_KEY=grace_minio_pass
-S3_BUCKET_NAME=grace-storage
+# Redis Configuration
+REDIS_URL=redis://localhost:6379/0
+REDIS_PASSWORD=
 
-# Vector Database Configuration
-VECTOR_URL=http://localhost:6333
+# OpenAI Configuration
+OPENAI_API_KEY=your_openai_api_key_here
+OPENAI_ORG_ID=
 
-# Service Configuration
-SERVICE_MODE=api
-API_HOST=0.0.0.0
-API_PORT=8080
-WORKER_QUEUES=ingestion,embeddings,media
-
-# Grace Core Configuration
-GRACE_INSTANCE_ID=grace_main_001
-GRACE_VERSION=1.0.0
+# Grace Configuration
+GRACE_ENV=development  # development, staging, production
 GRACE_LOG_LEVEL=INFO
-GRACE_DEBUG=false
+GRACE_ENABLE_METRICS=true
 
-# Security Configuration  
-JWT_SECRET_KEY=your_jwt_secret_key_here
-ENCRYPTION_KEY=your_encryption_key_here
+# Monitoring (optional)
+GRAFANA_PASSWORD=admin
+PROMETHEUS_ENABLED=false
 
-# Governance Configuration
-GOVERNANCE_STRICT_MODE=true
-CONSTITUTIONAL_ENFORCEMENT=true
-AUTO_ROLLBACK_ENABLED=true
+# Memory System
+MEMORY_CACHE_TTL=3600
+MEMORY_EMBEDDING_FALLBACK=true
+MEMORY_MAX_CACHE_SIZE=1000
 
-# MLDL Configuration
-MLDL_MIN_SPECIALISTS=3
-MLDL_MAX_SPECIALISTS=5
-MLDL_CONSENSUS_THRESHOLD=0.65
-
-# Monitoring & Telemetry
-ENABLE_TELEMETRY=true
-ENABLE_HEALTH_MONITORING=true
-METRICS_EXPORT_INTERVAL=30
-PROMETHEUS_ENDPOINT=http://localhost:9090
-
-# Development Settings
-DEV_MODE=false
-MOCK_AI_RESPONSES=false
-ENABLE_MOCK_SERVICES=false
+# Health Monitoring
+HEALTH_CHECK_INTERVAL=60
+AVN_REPORTING_ENABLED=true
