--- a/requirements.txt
+++ b/requirements.txt
@@ -57,9 +57,10 @@ pytest-cov>=4.1.0
 # Utilities
 python-dateutil>=2.8.2
 pytz>=2023.3
+rich>=13.7.0  # For pretty console output
 
 # CLI & Utilities
-rich>=13.7.0  # For pretty console output
+typer>=0.9.0
 
 # Optional: gRPC for swarm (production)
 # grpcio>=1.59.0
