--- a/.env.example
+++ b/.env.example
@@ -1,96 +1,37 @@
-# Grace AI System - Environment Configuration Template
-# Copy this file to .env and configure for your environment
+# Grace AI System - Environment Configuration
+# Open Source Configuration Only
 
-# =============================================================================
-# ENVIRONMENT
-# =============================================================================
-ENVIRONMENT=development  # Options: development, staging, production
+# Environment
+ENVIRONMENT=development
 DEBUG=true
 
-# =============================================================================
-# DATABASE
-# =============================================================================
-# SQLite (Development)
+# Database
 DATABASE_URL=sqlite:///./grace.db
+# DATABASE_URL=postgresql://grace:password@localhost/grace_db
 
-# PostgreSQL (Production)
-# DATABASE_URL=postgresql://grace_user:your_password@localhost:5432/grace_db
-
-DATABASE_ECHO=false
-DATABASE_POOL_SIZE=5
-DATABASE_MAX_OVERFLOW=10
-
-# =============================================================================
-# AUTHENTICATION
-# =============================================================================
-# ⚠️ CHANGE THIS IN PRODUCTION - Must be at least 32 characters
-AUTH_SECRET_KEY=dev-secret-key-change-in-production-min-32-chars
-
-AUTH_ALGORITHM=HS256
+# Authentication
+AUTH_SECRET_KEY=your-super-secret-key-min-32-chars
 AUTH_ACCESS_TOKEN_EXPIRE_MINUTES=30
-AUTH_REFRESH_TOKEN_EXPIRE_DAYS=7
 
-# =============================================================================
-# EMBEDDING PROVIDER
-# =============================================================================
-# Options: openai, huggingface, local
-EMBEDDING_PROVIDER=huggingface
+# Embedding Provider (Open Source Only)
+EMBEDDING_PROVIDER=huggingface  # Options: huggingface, local
 
-# OpenAI (if provider=openai)
-# EMBEDDING_OPENAI_API_KEY=sk-your-openai-api-key
+# [REMOVED] EMBEDDING_OPENAI_API_KEY - no longer needed
 
-# HuggingFace
+# HuggingFace Configuration
 EMBEDDING_HUGGINGFACE_MODEL=sentence-transformers/all-MiniLM-L6-v2
 EMBEDDING_DIMENSION=384
 
-# =============================================================================
-# VECTOR STORE
-# =============================================================================
-# Options: faiss, pgvector
+# Vector Store
 VECTOR_TYPE=faiss
-
-# FAISS
 VECTOR_FAISS_INDEX_PATH=./data/vectors/grace_index.bin
 
-# pgvector
-VECTOR_PGVECTOR_TABLE=document_embeddings
-
-# =============================================================================
-# SWARM INTELLIGENCE
-# =============================================================================
+# Features
 SWARM_ENABLED=false
-# SWARM_NODE_ID=node-1
-# SWARM_TRANSPORT=http  # Options: http, grpc, kafka
-# SWARM_PORT=8080
-# SWARM_DISCOVERY_INTERVAL=60
-
-# =============================================================================
-# TRANSCENDENCE LAYER
-# =============================================================================
 TRANSCENDENCE_QUANTUM_ENABLED=false
 TRANSCENDENCE_DISCOVERY_ENABLED=false
 TRANSCENDENCE_IMPACT_ENABLED=false
 
-# =============================================================================
-# OBSERVABILITY
-# =============================================================================
-OBSERVABILITY_LOG_LEVEL=INFO  # Options: DEBUG, INFO, WARNING, ERROR, CRITICAL
-OBSERVABILITY_JSON_LOGS=true
-# OBSERVABILITY_LOG_FILE=./logs/grace.log
+# Observability
+OBSERVABILITY_LOG_LEVEL=INFO
 OBSERVABILITY_METRICS_ENABLED=true
-OBSERVABILITY_METRICS_PORT=9090
-
-# =============================================================================
-# RATE LIMITING
-# =============================================================================
-RATE_LIMIT_ENABLED=true
-# RATE_LIMIT_REDIS_URL=redis://localhost:6379  # Optional, uses in-memory if not set
-RATE_LIMIT_DEFAULT_LIMIT=100
-RATE_LIMIT_WINDOW_SECONDS=60
-
-# =============================================================================
-# API CONFIGURATION
-# =============================================================================
-API_TITLE=Grace AI System API
-API_VERSION=1.0.0
-API_PREFIX=/api/v1
