--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-# Grace AI System - Complete Dependencies
+# Grace AI System - Complete Dependencies (Open Source Only)
 
 # Core Framework
 fastapi>=0.104.0
@@ -22,11 +22,10 @@ python-dotenv>=1.0.0
 redis>=5.0.0
 aioredis>=2.0.1
 
-# Embeddings & Vector Search
-openai>=1.0.0
-sentence-transformers>=2.2.2
-transformers>=4.35.0
-torch>=2.1.0
+# Embeddings & Vector Search (Open Source Only)
+sentence-transformers>=2.2.2  # Primary embedding solution
+transformers>=4.35.0          # Alternative local embeddings
+torch>=2.1.0                  # Required for transformers
 faiss-cpu>=1.7.4
 numpy>=1.24.0
 
@@ -57,10 +56,14 @@ pytest-cov>=4.1.0
 # Utilities
 python-dateutil>=2.8.2
 pytz>=2023.3
-rich>=13.7.0  # For pretty console output
+rich>=13.7.0
 
 # CLI & Utilities
 typer>=0.9.0
+
+# [REMOVED] Proprietary API dependencies:
+# - openai - replaced with sentence-transformers and local models
+# - anthropic - not used in Grace system
 
 # Optional: gRPC for swarm (production)
 # grpcio>=1.59.0
