--- a/requirements.txt
+++ b/requirements.txt
@@ -75,3 +75,10 @@ typer>=0.9.0
 # Optional: Loki/ELK for logging (production)
 # python-logging-loki>=0.3.1
 # elasticsearch>=8.11.0
+
+# Private LLM Support (Open Source)
+llama-cpp-python>=0.2.0        # llama.cpp Python bindings
+# vllm>=0.2.0                   # Production-grade inference (optional)
+# Optional backends:
+# onnxruntime>=1.16.0           # ONNX runtime
+# optimum>=1.14.0               # HuggingFace optimization
