--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,11 @@ sqlalchemy>=2.0.0
 psycopg2-binary>=2.9.9
 alembic>=1.12.0
 
+# Async Database Support
+asyncpg>=0.29.0              # Async Postgres
+aioredis>=2.0.1              # Async Redis (already listed)
+redis>=5.0.0                 # Redis (already listed)
+
 # Authentication & Security
 python-jose[cryptography]>=3.3.0
 passlib[bcrypt]>=1.7.4
