--- a/pytest.ini
+++ b/pytest.ini
@@ -3,11 +3,16 @@ testpaths = tests
 python_files = test_*.py
 python_classes = Test*
 python_functions = test_*
+
+# Add parent directory to Python path
+pythonpath = .
+
 addopts = 
     -v
     --strict-markers
     --tb=short
     --color=yes
+    --asyncio-mode=auto
 
 markers =
     asyncio: mark test as async
@@ -15,4 +20,5 @@ markers =
     integration: mark test as integration test
     unit: mark test as unit test
 
+# Asyncio configuration
 asyncio_mode = auto
