--- a/pytest.ini
+++ b/pytest.ini
@@ -4,21 +4,24 @@ python_files = test_*.py
 python_classes = Test*
 python_functions = test_*
 
-# Add parent directory to Python path
+# Ensure parent directory is in path
 pythonpath = .
+
+# Async support
+asyncio_mode = auto
 
 addopts = 
     -v
-    --strict-markers
     --tb=short
-    --color=yes
-    --asyncio-mode=auto
+    --strict-markers
+    -p no:warnings
 
 markers =
-    asyncio: mark test as async
-    slow: mark test as slow
-    integration: mark test as integration test
-    unit: mark test as unit test
+    asyncio: async test
+    slow: slow running test
+    integration: integration test
 
-# Asyncio configuration
-asyncio_mode = auto
+# Environment
+env =
+    ENVIRONMENT=testing
+    AUTH_SECRET_KEY=test-secret-key-minimum-32-characters-long
