--- a/.env.example
+++ b/.env.example
@@ -1,37 +1,45 @@
-# Grace AI System - Environment Configuration
-# Open Source Configuration Only
+# Grace Configuration Template
+# Copy to .env and fill in values
 
 # Environment
-ENVIRONMENT=development
-DEBUG=true
+GRACE_ENV=development
+GRACE_DEBUG=true
+
+# Service
+GRACE_SERVICE_NAME=grace-unified
+GRACE_HOST=0.0.0.0
+GRACE_PORT=8000
 
 # Database
-DATABASE_URL=sqlite:///./grace.db
-# DATABASE_URL=postgresql://grace:password@localhost/grace_db
+DATABASE_URL=postgresql://grace:password@localhost:5432/grace_db
+DATABASE_POOL_SIZE=10
 
-# Authentication
-AUTH_SECRET_KEY=your-super-secret-key-min-32-chars
-AUTH_ACCESS_TOKEN_EXPIRE_MINUTES=30
+# Redis
+REDIS_URL=redis://localhost:6379/0
+REDIS_ENABLED=true
 
-# Embedding Provider (Open Source Only)
-EMBEDDING_PROVIDER=huggingface  # Options: huggingface, local
+# Security
+AUTH_SECRET_KEY=change-this-to-a-secure-random-key-minimum-32-characters
+ENCRYPTION_KEY=your-base64-encoded-32-byte-encryption-key
 
-# [REMOVED] EMBEDDING_OPENAI_API_KEY - no longer needed
+# Logging
+LOG_LEVEL=INFO
+LOG_FORMAT=json
 
-# HuggingFace Configuration
-EMBEDDING_HUGGINGFACE_MODEL=sentence-transformers/all-MiniLM-L6-v2
-EMBEDDING_DIMENSION=384
+# Kernels
+KERNELS_ENABLED=multi_os,mldl,resilience
+KERNELS_AUTO_START=true
 
-# Vector Store
-VECTOR_TYPE=faiss
-VECTOR_FAISS_INDEX_PATH=./data/vectors/grace_index.bin
+# Monitoring
+METRICS_ENABLED=true
+METRICS_PORT=9090
 
-# Features
-SWARM_ENABLED=false
-TRANSCENDENCE_QUANTUM_ENABLED=false
-TRANSCENDENCE_DISCOVERY_ENABLED=false
-TRANSCENDENCE_IMPACT_ENABLED=false
+# Grafana
+GRAFANA_PASSWORD=admin
+GRAFANA_URL=http://localhost:3000
 
-# Observability
-OBSERVABILITY_LOG_LEVEL=INFO
-OBSERVABILITY_METRICS_ENABLED=true
+# Email (optional)
+SMTP_ENABLED=false
+SMTP_HOST=smtp.example.com
+SMTP_PORT=587
+SMTP_FROM=grace@example.com
