--- a/pytest.ini
+++ b/pytest.ini
@@ -4,7 +4,7 @@ python_files = test_*.py
 python_classes = Test*
 python_functions = test_*
 
-# Ensure parent directory is in path
+# Add parent directory to Python path
 pythonpath = .
 
 # Async support
@@ -15,11 +15,16 @@ addopts =
     --tb=short
     --strict-markers
     -p no:warnings
+    --strict-config
 
 markers =
     asyncio: async test
     slow: slow running test
     integration: integration test
+    unit: unit test
+
+# Type checking (requires pytest-mypy)
+# addopts = --mypy
 
 # Environment
 env =
